fix overflow not working on mobile

--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -68,7 +68,8 @@
     background-color: black;
     border-radius: 3px;
     padding: .7rem .7rem;
-    overflow-x: scroll; 
+    overflow: scroll; 
+    -webkit-overflow-scrolling: touch;
 }
 
 .postContent code {
